add some form element to forget pass

--- a/src/app/forget-pass/forget-pass.html
+++ b/src/app/forget-pass/forget-pass.html
@@ -1,1 +1,10 @@
-<div class="forget-pass"></div>
+<div class="forget-pass">
+    <div class="form-wrapper">
+        <form class="ui form" (submit)="onSubmit()">
+            <div class="field">
+                <input type="text" placeholder="请输入你的邮件地址...">
+            </div>
+            <button type="submit"></button>
+        </form>
+    </div>
+</div>
