--- a/src/app/email-confirm/email-confirm.html
+++ b/src/app/email-confirm/email-confirm.html
@@ -7,6 +7,6 @@
         <p><button class="ui button" (click)="returnToHome()">Click To Return</button></p>
     </div>
     <div class="failed" *ngIf="!isLoading && !emailValid">
-        <p>Something went wrong!</p>
+        <p>Fail to confirm email!</p>
     </div>
 </div>
