--- a/src/app/home/user-center/user-center.less
+++ b/src/app/home/user-center/user-center.less
@@ -36,6 +36,9 @@
         margin-left: 1em;
         color: #573a08;
       }
+      > .ui.button {
+        margin-left: 1em;
+      }
     }
     .ui.button {
       margin-left: 8em;
