--- a/src/app/admin/user-manager/user-manager.html
+++ b/src/app/admin/user-manager/user-manager.html
@@ -21,7 +21,7 @@
                 <td>{{user.email_confirmed ? 'YES': 'NO'}}</td>
                 <td>{{user.level}}</td>
                 <td>
-                    <a class="anchor-button" title="修改用户等级" (click)="promoteUser(user)"><i class="wizard icon"></i></a>
+                    <a *ngIf="currentAdmin.level >= 3" class="anchor-button" title="修改用户等级" (click)="promoteUser(user)"><i class="wizard icon"></i></a>
                 </td>
             </tr>
             </tbody>
