--- a/src/app/home/bangumi-card/bangumi-card.less
+++ b/src/app/home/bangumi-card/bangumi-card.less
@@ -5,10 +5,13 @@
   box-sizing: border-box;
   padding: 0.5rem 0;
   height: 16rem;
-  .ui.segment {
+  .ui.container {
     height: 100%;
-    margin: 0;
-    cursor: default;
+    .ui.segment {
+      height: 100%;
+      margin: 0;
+      cursor: default;
+    }
   }
 }
 
