--- a/src/app/home/bangumi-detail/bangumi-detail.html
+++ b/src/app/home/bangumi-detail/bangumi-detail.html
@@ -4,13 +4,7 @@
 <div class="ui container bangumi-default-container" *ngIf="bangumi">
     <div class="bangumi-info">
         <div #bangumiCover class="bangumi-cover" *ngIf="bangumi.cover">
-            <ui-image-placeholder [imageUrl]="bangumi.cover">
-                <div class="ui-image-fallback">
-                    <h4 class="ui icon film icon-holder">
-                        <i class="film icon"></i>
-                    </h4>
-                </div>
-            </ui-image-placeholder>
+            <responsive-image [src]="bangumi.cover" [size]="{width: '100%', height: 'auto'}"></responsive-image>
         </div>
         <div class="bangumi-cover-revealer" [style.height]="coverRevealerHeight" (click)="toggleCover()">
         </div>
