--- a/src/app/admin/bangumi-card/bangumi-card.html
+++ b/src/app/admin/bangumi-card/bangumi-card.html
@@ -1,6 +1,6 @@
 <div class="ui segment">
     <div class="bangumi-list-item">
-        <div class="cover-wrapper" *ngIf="!!bangumi.cover">
+        <div class="cover-wrapper" *ngIf="!!bangumi.cover" [style.background]="bangumi.cover_color">
             <img [originalSrc]="bangumi.cover" [dimension]="{width: '10rem', height: '13rem'}" alt="image" class="bangumi-image">
         </div>
         <div class="cover-wrapper" *ngIf="!!bangumi.image && !bangumi.cover">
