--- a/src/app/admin/bangumi-detail/bangumi-detail.html
+++ b/src/app/admin/bangumi-detail/bangumi-detail.html
@@ -11,7 +11,10 @@
 <div class="bangumi-detail-container" *ngIf="bangumi">
     <div class="bangumi-basic-info">
         <div class="cover-wrapper">
-            <responsive-image [src]="bangumi.cover" [size]="{width: '100%', height: 'auto'}"></responsive-image>
+            <responsive-image
+                [src]="bangumi.cover"
+                [size]="{width: '100%', height: 'auto'}"
+                [background]="bangumi.cover_color"></responsive-image>
         </div>
         <div class="bangumi-info-text">
             <h3 class="bangumi-title">
@@ -129,7 +132,8 @@
                         <responsive-image
                             [src]="episode.thumbnail"
                             [size]="{width: '6rem', height: '3.375rem'}"
-                            display="table" *ngIf="episode.status === 2"></responsive-image>
+                            display="table" *ngIf="episode.status === 2"
+                            [background]="episode.thumbnail_color"></responsive-image>
                     </td>
                     <td class="title">
                         <span class="key">日文:</span><span class="value">{{episode.name}}</span> <br>
