--- a/src/app/home/bangumi-detail/bangumi-detail.html
+++ b/src/app/home/bangumi-detail/bangumi-detail.html
@@ -4,7 +4,9 @@
 <div class="ui container bangumi-default-container" *ngIf="bangumi">
     <div class="bangumi-info">
         <div #bangumiCover class="bangumi-cover" *ngIf="bangumi.cover">
-            <responsive-image [src]="bangumi.cover" [size]="{width: '100%', height: 'auto'}"></responsive-image>
+            <responsive-image [src]="bangumi.cover"
+                              [size]="{width: '100%', height: 'auto'}"
+                              [background]="bangumi.cover_color"></responsive-image>
         </div>
         <div class="bangumi-cover-revealer" [style.height]="coverRevealerHeight" (click)="toggleCover()">
         </div>
@@ -49,9 +51,9 @@
                     <span>第{{episode.episode_no}}话</span>
                 </div>
                 <a *ngIf="episode.status===2" class="image" [routerLink]="['/play', episode.id]">
-                    <span class="image-wrapper">
-                        <img [originalSrc]="episode.thumbnail" alt="image">
-                    </span>
+                    <responsive-image [src]="episode.thumbnail"
+                                      [size]="{width: '100%', ratio: 0.5625}"
+                                      [background]="episode.thumbnail_color"></responsive-image>
                 </a>
                 <a *ngIf="episode.status===2" class="content" [routerLink]="['/play', episode.id]">
                     <span>第{{episode.episode_no}}话</span>
