--- a/src/app/video-player/controls/volume-control/volume-control.html
+++ b/src/app/video-player/controls/volume-control/volume-control.html
@@ -1,6 +1,7 @@
 <div class="mute-button">
     <i class="icon" [ngClass]="volumeLevelClass"></i>
 </div>
-<div class="volume-slider-wrapper">
+<div class="volume-slider-wrapper" #slider>
     <div class="volume-slider"></div>
+    <div class="slider-handler"></div>
 </div>
