--- a/src/app/video-player/controls/controls.html
+++ b/src/app/video-player/controls/controls.html
@@ -1,3 +1,10 @@
-<ng-content>
-
-</ng-content>
+<div class="control-wrapper">
+    <div class="control-bar">
+        <video-player-scrub-bar></video-player-scrub-bar>
+        <div class="control-buttons">
+            <video-play-button></video-play-button>
+            <video-volume-control></video-volume-control>
+            <video-time-indicator></video-time-indicator>
+        </div>
+    </div>
+</div>
