--- a/src/app/video-player/controls/scrub-bar/scrub-bar.html
+++ b/src/app/video-player/controls/scrub-bar/scrub-bar.html
@@ -1,3 +1,4 @@
-<div class="scrub-bar-wrapper">
-
+<div class="scrub-bar-wrapper" [ngClass]="{'not-mobile': notMobileDevice}">
+    <div class="buffered-bar" [style.width]="bufferedRatio + '%'"></div>
+    <div class="play-progress-bar" [style.width]="playProgressRatio + '%'"></div>
 </div>
