add fullscreen button to control bar, but not finished full screen feature

--- a/src/app/video-player/controls/controls.html
+++ b/src/app/video-player/controls/controls.html
@@ -5,6 +5,9 @@
             <video-play-button></video-play-button>
             <video-volume-control (motion)="onMotion()"></video-volume-control>
             <video-time-indicator></video-time-indicator>
+            <div class="right-aligned-controls">
+                <video-fullscreen-button></video-fullscreen-button>
+            </div>
         </div>
     </div>
 </div>
