--- a/src/app/video-player/controls/controls.less
+++ b/src/app/video-player/controls/controls.less
@@ -33,8 +33,14 @@
       flex-direction: row;
       justify-content: flex-start;
       align-items: center;
-
       color: #f8f8f8;
+      .right-aligned-controls {
+        flex: 1 1 auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        align-items: center;
+      }
     }
   }
 }
