--- a/src/app/video-player/video-player.less
+++ b/src/app/video-player/video-player.less
@@ -5,6 +5,28 @@
   position: relative;
   background-color: #000;
   outline: none;
+  width: 854px;
+  height: 480px;
+
+  @media screen and (max-width: 656px) {
+    width:426px;
+    height: 240px;
+  }
+
+  @media screen and (min-width: 1320px) and (min-height:870px) {
+    width:1280px;
+    height: 720px;
+  }
+
+  &.fullscreen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+  }
 }
 
 video {
