add capture service, container and button

--- a/src/app/video-player/video-player.html
+++ b/src/app/video-player/video-player.html
@@ -4,3 +4,4 @@
        crossorigin>
     <source [src]="mediaUrl" [type]="mediaType">
 </video>
+<video-captured-frame-list></video-captured-frame-list>
