--- a/src/app/video-player/controls/controls.html
+++ b/src/app/video-player/controls/controls.html
@@ -6,6 +6,7 @@
             <video-volume-control (motion)="onMotion()"></video-volume-control>
             <video-time-indicator></video-time-indicator>
             <div class="right-aligned-controls">
+                <video-capture-button></video-capture-button>
                 <video-fullscreen-button></video-fullscreen-button>
             </div>
         </div>
