improve capture feature

--- a/src/app/video-player/controls/controls.html
+++ b/src/app/video-player/controls/controls.html
@@ -1,4 +1,5 @@
 <div class="control-wrapper">
+    <video-captured-frame-list></video-captured-frame-list>
     <div class="control-bar" (click)="onControlBarClick($event)">
         <video-player-scrub-bar (motion)="onMotion()"></video-player-scrub-bar>
         <div class="control-buttons">
