--- a/src/app/video-player/controls/captured-frame-list/captured-frame-list.less
+++ b/src/app/video-player/controls/captured-frame-list/captured-frame-list.less
@@ -10,7 +10,7 @@
 .captured-frame-list-wrapper {
   width: 100%;
   height: 100%;
-  padding: 0.5rem 0;
+  padding: 0.6rem 0.3rem;
   overflow-y: hidden;
   overflow-x: auto;
   white-space: nowrap;
