add some solution to solve chrome infinite pending issue

--- a/src/app/video-player/video-player.html
+++ b/src/app/video-player/video-player.html
@@ -1,6 +1,6 @@
 <video #media
        [id]="playerId"
-       preload="metadata"
+       preload="none"
        crossorigin>
     <source [src]="mediaUrl" [type]="mediaType">
 </video>
