unfinished config dialog. add some tricky hack to avoid chrome sockets hold

--- a/src/app/video-player/controls/config-button/config-dialog/config-dialog.html
+++ b/src/app/video-player/controls/config-button/config-dialog/config-dialog.html
@@ -1,1 +1,8 @@
-<div class="content"></div>
+<form class="ui form">
+    <div class="inline field">
+        <div class="ui checkbox">
+            <input type="checkbox" tabindex="0" #directDownload>
+            <label>截图之后直接下载图片</label>
+        </div>
+    </div>
+</form>
