--- a/src/app/video-player/controls/captured-frame-list/operation-dialog/operation-dialog.less
+++ b/src/app/video-player/controls/captured-frame-list/operation-dialog/operation-dialog.less
@@ -17,8 +17,8 @@
 
 
   @media screen and (max-width: 656px) {
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 200px;
   }
 
   @media screen and (min-width: 1320px) and (min-height:870px) {
