--- a/src/app/video-player/controls/config-button/config-dialog/config-dialog.less
+++ b/src/app/video-player/controls/config-button/config-dialog/config-dialog.less
@@ -12,9 +12,10 @@
   overflow: hidden;
   padding-bottom: 5rem;
 
-  width: 200px;
-  height: 150px;
+  width: 300px;
+  height: 100px;
 }
 
 .ui.form {
+  padding: 1rem;
 }
