--- a/src/app/video-player/controls/controls.less
+++ b/src/app/video-player/controls/controls.less
@@ -7,6 +7,21 @@
   bottom: 0;
 }
 
+.reflect-state-indicator {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  width: 2rem;
+  height: 2rem;
+  font-size: 2rem;
+  color: #fff;
+  line-height: 1;
+  z-index: 10;
+}
+
 .control-wrapper {
   width: 100%;
   height: 100%;
@@ -17,6 +32,13 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  overflow: hidden;
+  position: relative;
+  z-index: 100;
+
+  &.hide-cursor {
+    cursor: none;
+  }
 
   > .control-bar {
     display: flex;
