--- a/src/app/video-player/controls/scrub-bar/scrub-bar.less
+++ b/src/app/video-player/controls/scrub-bar/scrub-bar.less
@@ -7,7 +7,8 @@
   position: relative;
   flex: 0 0 auto;
   width: 100%;
-  height: 0.45rem;
+  height: 1rem;
+  margin-top: -0.54rem;
   cursor: pointer;
   &:hover,
   &:focus {
@@ -25,7 +26,8 @@
 
 .scrub-bar-wrapper {
   width: 100%;
-  height: 80%;
+  height: 0.36rem;
+  top: 0.54rem;
   position: relative;
   background-color: rgba(255, 255, 255, 0.1);
 
