--- a/src/app/video-player/controls/config-button/config-dialog/config-dialog.less
+++ b/src/app/video-player/controls/config-button/config-dialog/config-dialog.less
@@ -8,7 +8,8 @@
   display: block;
   box-sizing: border-box;
   text-align: left;
-  background-color: #fff;
+  background-color: #000;
+  color: #fff;
   overflow: hidden;
   padding-bottom: 5rem;
 
