--- a/src/app/video-player/controls/controls.html
+++ b/src/app/video-player/controls/controls.html
@@ -1,6 +1,9 @@
-<div class="control-wrapper">
-    <video-captured-frame-list></video-captured-frame-list>
-    <div class="control-bar" (click)="onControlBarClick($event)">
+<div class="reflect-state-indicator" (@reflectState.done)="reflectAnimationCallback()" [@reflectState]="reflectState">
+    <i class="icon" [ngClass]="reflectIconClass"></i>
+</div>
+<div class="control-wrapper" [ngClass]="{'hide-cursor': !showControls}" (click)="onClickVideo($event)">
+    <video-captured-frame-list [showControls]="showControls"></video-captured-frame-list>
+    <div class="control-bar" (click)="onControlBarClick($event)" [@controlBarState]="controlBarState">
         <video-player-scrub-bar (motion)="onMotion()"></video-player-scrub-bar>
         <div class="control-buttons">
             <video-play-button></video-play-button>
