--- a/src/app/video-player/video-player.html
+++ b/src/app/video-player/video-player.html
@@ -4,3 +4,6 @@
        crossorigin>
     <source [src]="mediaUrl" [type]="mediaType">
 </video>
+<div class="overlay" #overlay [ngClass]="{show: showLoader}">
+    <div class="ui active medium loader"></div>
+</div>
