--- a/src/app/video-player/video-player.less
+++ b/src/app/video-player/video-player.less
@@ -34,3 +34,15 @@ video {
   width: 100%;
   height: 100%;
 }
+
+.overlay {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  &.show {
+    display: block;
+  }
+}
