--- a/src/app/video-player/controls/scrub-bar/scrub-bar.html
+++ b/src/app/video-player/controls/scrub-bar/scrub-bar.html
@@ -2,3 +2,6 @@
     <div class="buffered-bar" [style.width]="bufferedRatio + '%'"></div>
     <div class="play-progress-bar" [style.width]="playProgressRatio + '%'"></div>
 </div>
+<div class="tip" [style.transform]="pointTransform" [style.opacity]="pointOpacity" #tip>
+    {{pointPosition}}
+</div>
