--- a/src/app/video-player/controls/scrub-bar/scrub-bar.less
+++ b/src/app/video-player/controls/scrub-bar/scrub-bar.less
@@ -43,3 +43,19 @@
     height: 100%;
   }
 }
+
+.tip {
+  position: absolute;
+  left: 0;
+  top: -(1.7rem + 0.54rem);
+  padding: 0.4rem;
+  background: rgba(0, 0, 0, 0.9);
+  color: #fff;
+  font-size: 0.9rem;
+  transform: translateX(0);
+  transition: opacity 100ms ease;
+  opacity: 0;
+  -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
+  -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
+}
