--- a/src/app/video-player/touch-controls/touch-controls.less
+++ b/src/app/video-player/touch-controls/touch-controls.less
@@ -10,7 +10,9 @@
 .touch-control-wrapper {
   width: 100%;
   height: 100%;
-  display: block;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -18,6 +20,27 @@
   overflow: hidden;
   position: relative;
   z-index: 100;
+  .top-section {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: flex-start;
+    padding: 0.5rem 0 1.5rem 0;
+    color: #fff;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  }
+  .center-section {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-size: 2.5rem;
+    color: #fff;
+  }
   .bottom-section {
     position: absolute;
     left: 0;
