fix play issue in iOS 10

--- a/src/app/video-player/video-player.html
+++ b/src/app/video-player/video-player.html
@@ -1,6 +1,7 @@
 <video #media
        preload="none"
        crossorigin
+       playsinline
        [id]="playerId"
        [poster]="thumbnail">
     <source [src]="mediaUrl" [type]="mediaType">
