add help dialog

--- a/src/app/video-player/controls/controls.html
+++ b/src/app/video-player/controls/controls.html
@@ -10,6 +10,7 @@
             <video-volume-control (motion)="onMotion()"></video-volume-control>
             <video-time-indicator></video-time-indicator>
             <div class="right-aligned-controls">
+                <video-player-help-button></video-player-help-button>
                 <video-player-config-button></video-player-config-button>
                 <video-capture-button></video-capture-button>
                 <video-fullscreen-button></video-fullscreen-button>
