--- a/src/app/video-player/controls/controls.html
+++ b/src/app/video-player/controls/controls.html
@@ -6,14 +6,14 @@
     <div class="control-bar" (click)="onControlBarClick($event)" [@controlBarState]="controlBarState">
         <video-player-scrub-bar (motion)="onMotion()" [showControls]="showControls"></video-player-scrub-bar>
         <div class="control-buttons">
-            <video-play-button></video-play-button>
+            <video-play-button [controlVisibleState]="showControls"></video-play-button>
             <video-volume-control (motion)="onMotion()"></video-volume-control>
             <video-time-indicator></video-time-indicator>
             <div class="right-aligned-controls">
                 <video-player-help-button></video-player-help-button>
                 <video-player-config-button></video-player-config-button>
                 <video-capture-button></video-capture-button>
-                <video-fullscreen-button></video-fullscreen-button>
+                <video-fullscreen-button [controlVisibleState]="showControls"></video-fullscreen-button>
             </div>
         </div>
     </div>
