--- a/src/app/video-player/controls/controls.html
+++ b/src/app/video-player/controls/controls.html
@@ -2,7 +2,7 @@
     <i class="icon" [ngClass]="reflectIconClass"></i>
 </div>
 <div class="control-wrapper" (click)="onClickVideo($event)" #controlWrapper>
-    <video-captured-frame-list [showControls]="showControls"></video-captured-frame-list>
+    <video-captured-frame-list [showControls]="showControls" (motion)="onMotion()"></video-captured-frame-list>
     <div class="control-bar" (click)="onControlBarClick($event)" [@controlBarState]="controlBarState">
         <video-player-scrub-bar (motion)="onMotion()" [showControls]="showControls"></video-player-scrub-bar>
         <div class="control-buttons">
