temporary remove twitter button because it is not supported yet

--- a/src/app/video-player/controls/captured-frame-list/operation-dialog/operation-dialog.html
+++ b/src/app/video-player/controls/captured-frame-list/operation-dialog/operation-dialog.html
@@ -5,9 +5,9 @@
 </div>
 <div class="operation-wrapper">
     <div class="operation-buttons">
-        <a class="operation-button" (click)="shareToTwitter($event)" title="分享到Twitter">
-            <i class="twitter square icon"></i>
-        </a>
+        <!--<a class="operation-button" (click)="shareToTwitter($event)" title="分享到Twitter">-->
+            <!--<i class="twitter square icon"></i>-->
+        <!--</a>-->
         <a class="operation-button" (click)="download($event)" title="下载到本地">
             <i class="download icon"></i>
         </a>
