--- a/src/app/home/default/default.html
+++ b/src/app/home/default/default.html
@@ -9,7 +9,9 @@
     <div class="ui five doubling cards" *ngIf="onAirBangumi">
         <div class="card bangumi-card" *ngFor="let bangumi of onAirBangumi">
             <a class="image" [routerLink]="['/bangumi', bangumi.id]">
-                <responsive-image [src]="bangumi.cover" [size]="{width: '100%', ratio: 1.405152224824}" [background]="bangumi.cover_color"></responsive-image>
+                <responsive-image [src]="bangumi.cover"
+                                  [size]="{width: '100%', ratio: 1.405152224824}"
+                                  [background]="bangumi.cover_color"></responsive-image>
             </a>
             <div *ngIf="bangumi.favorite_status" class="ui ribbon label"
                  [ngClass]="{
